2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Share a functor used in Wolf's binarization.

	* scribo/binarization/internal/global_max_stddev_functor.hh: New.

	* scribo/binarization/wolf.hh,
	* scribo/binarization/wolf_fast.hh: Remove functor declaration.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	* headers.mk: Regen.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* demo/viewer/image_region.hh: Add Q_INTERFACES.

	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/singh_functor.hh: Fix declaration
	of init() member.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* scribo/primitive/extract/lines_h_single.hh: Fix an invalid
	function name.

	* scribo/text/extract_paragraphs_hdoc.hh: Remove useless inline
	keyword.

	* scribo/toolchain/text_in_doc_preprocess.hh: Fix argument name.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms.hh: Add a new overload and
	preconditions.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation layout.

	* doc/Doxyfile.in: Improve member functions presentation.

	* doc/DoxygenLayout.xml: Fix invalid xml elements.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation of Scribo.

	* doc/scribo/binarization/binarization.dox,
	* doc/scribo/binarization/kim.dox,
	* doc/scribo/binarization/otsu.dox,
	* doc/scribo/binarization/wolf.dox,
	* doc/scribo/core/component_set.dox,
	* doc/scribo/filter/component_groups.dox,
	* doc/scribo/filter/component_links.dox,
	* doc/scribo/filter/components.dox,
	* doc/scribo/filter/elements.dox,
	* doc/scribo/filter/line_links.dox,
	* doc/scribo/filter/paragraphs.dox,
	* doc/scribo/primitive/extract/separators.dox,
	* scribo/core/component_info.hh,
	* scribo/core/tag/component.hh: Add more documentation.

	* doc/scribo/layout/layout.dox,
	* doc/scribo/namespaces.dox,
	* doc/scribo/primitive/extract/components.dox,