@@ -51,14 +51,20 @@ namespace scribo
 # include <scribo/binarization/local_threshold.hh>
 
 # include <scribo/binarization/niblack.hh>
+# include <scribo/binarization/niblack_fast.hh>
+# include <scribo/binarization/niblack_threshold.hh>
 
 # include <scribo/binarization/otsu.hh>
+# include <scribo/binarization/otsu_threshold.hh>
 
 # include <scribo/binarization/sauvola.hh>
 # include <scribo/binarization/sauvola_ms.hh>
 # include <scribo/binarization/sauvola_ms_split.hh>
 # include <scribo/binarization/sauvola_threshold.hh>
 
+# include <scribo/binarization/singh.hh>
+
 # include <scribo/binarization/wolf.hh>
+# include <scribo/binarization/wolf_fast.hh>
 
 #endif // ! SCRIBO_BINARIZATION_ALL_HH
